--- a/.travis.yml
+++ b/.travis.yml
@@ -1,69 +1,20 @@
-language: python
-
-python: 3.5
-
-# Use container based infrastructure
 sudo: false
-
-addons:
-  apt:
-    packages:
-      - libenchant-dev
-
-#env:
-matrix:
-  include:
-    - python: '3.6'
-      env: TOXENV=flake8
-    - python: '3.6'
-      env: TOXENV=py36-dj111-cms34
-    - python: '3.5'
-      env: TOXENV=py35-dj19-cms33
-    - python: '3.5'
-      env: TOXENV=py35-dj18-cms33
-    - python: '3.4'
-      env: TOXENV=py34-dj19-cms33
-    - python: '3.4'
-      env: TOXENV=py34-dj18-cms33
-    - python: '2.7'
-      env: TOXENV=py27-dj19-cms33
-    - python: '2.7'
-      env: TOXENV=py27-dj18-cms33
-    - python: '3.5'
-      env: TOXENV=py35-dj111-cms34
-    - python: '3.5'
-      env: TOXENV=py35-dj110-cms34
-    - python: '3.5'
-      env: TOXENV=py35-dj19-cms34
-    - python: '3.5'
-      env: TOXENV=py35-dj18-cms34
-    - python: '3.4'
-      env: TOXENV=py34-dj111-cms34
-    - python: '3.4'
-      env: TOXENV=py34-dj110-cms34
-    - python: '3.4'
-      env: TOXENV=py34-dj19-cms34
-    - python: '3.4'
-      env: TOXENV=py34-dj18-cms34
-    - python: '2.7'
-      env: TOXENV=py27-dj111-cms34
-    - python: '2.7'
-      env: TOXENV=py27-dj110-cms34
-    - python: '2.7'
-      env: TOXENV=py27-dj19-cms34
-    - python: '2.7'
-      env: TOXENV=py27-dj18-cms34
-#  allow_failures:
+language: python
+python: 
+  - "2.7"
+  - "3.5"
+  - "3.6"
+  - "3.7"
 
 cache:
   directories:
     - $HOME/.wheelhouse
 
 install:
-  - pip install tox
+  - pip install tox-travis
   - pip install coveralls
 
 script:
-  - tox -e $TOXENV
+  - tox
 
 after_success: coveralls
