--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
+requires =
+    pip >= 23.3
 envlist =
     flake8
-    py{36,35,27}-dj{111}-cms{34}
-    py{36}-dj{111}-cms{35}
-    py{37,36}-dj{20,21}-cms{36}
-
+    py{39,310,311}-dj{32}-cms{39,310,311}
+    py{310,311,312}-dj{42}-cms{311}
 [testenv]
 passenv =
     CI
@@ -13,28 +13,24 @@ passenv =
     TRAVIS_*
 deps =
     -rtest_requirements/base.txt
-    dj111: django>=1.11,<2.0
-    dj20: django>=2.0,<2.1
-    dj21: django>=2.1,<2.2
 
-    cms34: django-cms>=3.4,<3.5
-    cms34: djangocms-text-ckeditor>=3.0,<3.1
+    dj32: django>=3.2,<4.0
+    dj42: django>=4.2,<5.0
 
-    cms35: django-cms>=3.5,<3.6
-    cms35: djangocms-text-ckeditor>=3.5.1,<3.6
+    cms39: django-cms>=3.9,<3.10
+    cms310: django-cms>=3.10,<3.11
+    cms311: django-cms>=3.11,<3.12
 
-    cms36: django-cms>=3.6,<3.7
-    cms36: djangocms-text-ckeditor>=3.6.1,<3.8
 commands =
     {envpython} --version
     - coverage erase
     coverage run manage.py test
     - coverage report
 basepython =
-    py27: python2.7
-    py35: python3.5
-    py36: python3.6
-    py37: python3.7
+    py39: python3.9
+    py310: python3.10
+    py311: python3.11
+    py312: python3.12
 
 [testenv:flake8]
 deps = flake8
